--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       name="keywords"
-      content="SecuroServ, file encryption, secure vault, cybersecurity, data protection, encryption service, privacy, cloud security"
+      content="Protect your files with SecuroServ — a secure local vault with AES-256-GCM encryption. Your data stays private, encrypted, and fully under your control."
     />
     <meta name="author" content="SecuroServ Team" />
     <meta name="robots" content="index, follow" />
@@ -21,7 +21,7 @@
     <meta property="og:title" content="SecuroServ - Secure Vault & File Encryption Service" />
     <meta
       property="og:description"
-      content="Keep your data safe with military-grade encryption and secure vault storage. Privacy-first protection by SecuroServ."
+      content="Keep your files safe with SecuroServ — a secure local vault powered by AES-256-GCM encryption. No cloud. No tracking. Full privacy."
     />
     <meta property="og:image" content="https://securoserv.co.in/og-image.jpg" />
     <meta property="og:url" content="https://securoserv.co.in" />
@@ -32,7 +32,7 @@
     <meta name="twitter:title" content="SecuroServ - Secure Vault & File Encryption Service" />
     <meta
       name="twitter:description"
-      content="Your files deserve next-level encryption. SecuroServ keeps them protected and private."
+      content="Keep your files safe with SecuroServ — a secure local vault powered by AES-256-GCM encryption. No cloud. No tracking. Full privacy."
     />
     <meta name="twitter:image" content="https://securoserv.co.in/og-image.jpg" />
 
